# heap-analysis

./: Cargo.toml  LICENSE  README.md
analyze/: Cargo.toml
analyze/src/: dataflow.rs  lib.rs  main.rs  web.rs
analyze/static/: heatmap.vl.json  heatmap_size.vl.json  index.html
example/: Cargo.toml
example/examples/: flow_controlled.rs
example/src/: main.rs
track/: Cargo.toml
track-types/: Cargo.toml  build.rs  track-types.capnp
track-types/src/: lib.rs
track/src/: heaptrack.rs  lib.rs  stacktrace.rs  trace.rs
