[package]
name = "analyze"
version = "0.1.0"
edition = "2021"
authors = ["Moritz Hoffmann <antiguru@gmail.com>"]
license = "MIT"

[dependencies]
bincode = "1.3"
crossbeam-channel = "0.5"
heap-analysis-track = { path = "../track" }
track-types = { path = "../track-types" }
serde = "1.0"
timely = "0.12"
