[package]
name = "analyze"
version = "0.1.0"
edition = "2021"
authors = ["Moritz Hoffmann <antiguru@gmail.com>"]
license = "MIT"

[dependencies]
bincode = "1.3"
crossbeam-channel = "0.5"
differential-dataflow = "0.12"
serde = "1.0"
timely = { version  = "0.12", features = ["bincode"] }
track-types = { path = "../track-types" }
