[package]
name = "analyze"
version = "0.1.0"
edition = "2021"
authors = ["Moritz Hoffmann <antiguru@gmail.com>"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3"
bincode = "1.3"
crossbeam-channel = "0.5"
differential-dataflow = "0.12"
fnv = "1.0"
serde = "1.0"
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "0.8", features = ["serde", "v4"]}
timely = { version  = "0.12", features = ["bincode"] }
track-types = { path = "../track-types" }
