[package]
name = "track-types"
version = "0.1.0"
edition = "2021"
authors = ["Moritz Hoffmann <antiguru@gmail.com>"]
license = "MIT"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capnp = "0.14"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
capnpc = "0.14"
