[package]
name = "heap-analysis-track"
version = "0.1.0"
edition = "2021"
authors = ["Moritz Hoffmann <antiguru@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
backtrace = "0.3"
bincode = "1.3"
crossbeam-channel = "0.5"
lazy_static = "1.4"
libc = "0.2"
thread-id = "4.0"
track-types = { path = "../track-types" }
